syntax = "proto3";

package complexpb;
option go_package = "/complexpb";

message ComplexMessage {
  DummyMessage one_dummy = 2;
  repeated DummyMessage multiple_dummies = 3;
}

message DummyMessage {
  int32 id = 1;
  string message = 2;
}