syntax = "proto3";

package simplepb;
option go_package = "/simplepb";

message SimpleMessage {
  int32 id = 1;
  bool is_simple = 2;
  string message = 3;
  repeated int32 simple_list = 4;
}